--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
+"dependencies": {
+  "next": "14.0.0",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "stripe": "^14.0.0"
+},
   "devDependencies": {
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
