--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
     "next-auth": "^4.29.0"
   },
   "devDependencies": {
