--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^14.0.0",
-    "next-auth": "^4.24.13"
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
